Wed Jan 14 18:42:44 EET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Added SILC_CLIENT_CONN_ERROR_KE, ERROR_AUTH, ERROR_RESUME and
	  ERROR_TIMEOUT SilcClientConnectionStatus errors.  Affected
	  files are lib/silcclient/silcclient.h, client.c.

Mon Jan 12 13:01:10 CET 2004  Jochen Eisinger <jochen@penguin-breeder.org>

	* When resuming a session fails, notify the user that the session
	  file needs to be removed eventually.  Affected files
	  irssi/src/fe-common/silc/module-formats.[ch],
	  irssi/src/silc/core/client_ops.c.

Tue Jan 04 12:16:04 CET 2004  Jochen Eisinger <jochen@penguin-breeder.org>

	* Added DIST_SUBDIRS symbols to include all subdirs in distributions.
	  Affected files lib/silcutil/Makefile.am, lib/silcmath/Makefile.am

	* Typofix in Irssi::Silc module.  Affected file 
	  irssi/src/perl/silc/Silc.xs.

Tue Jan 04 02:43:44 CET 2004  Jochen Eisinger <jochen@penguin-breeder.org>

	* Changed the way NOTICE flagged messages are treated. Added support
	  for notices in queries and signing notices.  Affected files
	  irssi/default.theme; irssi/docs/help/in/notice.in;
	  irssi/src/fe-common/silc/module-formats.[ch], fe-silc-messages.c;
	  irssi/src/silc/core/client_ops.c, silc-channels.c, silc-servers.c

	* Fixed typo in /ACTION help.  Affected file 
	  irssi/docs/help/in/action.in

Mon Jan 03 23:26:38 CET 2004  Jochen Eisinger <jochen@penguin-breeder.org>

	* Fixed typo in perl module.  Affected file 
	  irssi/src/perl/silc/Server.xs

	* Changed the way ACTION flagged messages are treated. Added support
	  for actions in queries and signing actions.  Affected files
	  irssi/default.theme; irssi/docs/help/in/action.in;
	  irssi/src/fe-common/silc/module-formats.[ch], fe-silc-messages.c,
	  fe-silc-queries.c; irssi/src/silc/core/client_ops.c, silc-channels.c,
	  silc-servers.[ch]

Mon Jan 03 16:04:29 CET 2004  Jochen Eisinger <jochen@penguin-breeder.org>

	* Incorrectly reported error when client had to be resolved from